# MyTransition

transition4cpp/: CMakeLists.txt
transition4cpp/src/: Callback.h  Condition.cpp  Condition.h  Event.cpp  Event.h  EventData.cpp  EventData.h  Machine.cpp  Machine.h  Matter.cpp  Matter.h  Model.cpp  Model.h  Object.h  State.cpp  State.h  Transition.cpp  Transition.h  Utility.h  main.cpp
